--- a/DynamicForm/Views/DynamicForm/Index.cshtml
+++ b/DynamicForm/Views/DynamicForm/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<TemplateFieldsModel>
+@using Shared
 
 <link href="~/lib/datatables/css/jquery.datatables.min.css" rel="stylesheet" />
 <link href="~/lib/sweetalert/css/sweetalert2.min.css" rel="stylesheet" />
@@ -8,75 +9,80 @@
     }
 </style>
 <div>
-    <div class="x_title">
+    <div id="temlateName" class="x_title">
 
         <h2 class="modal-header bg-warning">@ViewBag.TemplateName</h2>
     </div>
-    <form name="userform" asp-controller="DynamicForm" asp-action="SaveFormValues" method="post"
-          data-ajax="true" data-ajax-method="post" data-ajax-complete="completedsaveform" enctype="multipart/form-data" autocomplete="off">
-        <div class="modal-body">
-            @if (Model.Count() > 0)
-            {
-                @Html.Hidden("TemplateFormId", (object)ViewBag.TemplateFormId)
-                @foreach (var item in Model)
+    <div id="showViewResponse">
+        <form name="userform" asp-controller="DynamicForm" asp-action="SaveFormValues" method="post"
+              data-ajax="true" data-ajax-method="post" data-ajax-complete="completedsaveform" enctype="multipart/form-data" autocomplete="off">
+            <div class="modal-body">
+                @if (Model.Count() > 0)
                 {
-                    <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                    @Html.Hidden("TemplateFormId", (object)ViewBag.TemplateFormId)
+                    @foreach (var item in Model)
+                    {
+                        <div class="row">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
 
-                            <div class="x_content">
-                                @if (item.ControlName == "TextBox")
-                                {
-                                    <div class="col-span-12 sm:col-span-6">
-                                        <label for="nameinput" class="form-label">@item.Name</label>
-                                        <input name="@item.Name" id="nameinput" type="text" class="form-control" style="width:40%">                                       
-                                    </div>
-                                }
-                                else if (item.ControlName == "TextArea")
-                                {
-                                    <div class="col-span-12 sm:col-span-6">
-                                        <label for="textareainput" class="form-label">@item.Name</label>
-                                        <textarea name="@item.Name" id="textareainput" class="form-control" rows="2" style="width:40%"></textarea>
-                                    </div>
-                                }
-                                else if (item.ControlName == "Select")
-                                {
-                                    <div class="col-span-12 sm:col-span-12">
-                                        <label for="selection" class="form-label">@item.Name</label>
-                                        <select class="form-control" id="selection" style="width:40%">
-                                            <option selected>Telangana</option>
-                                            <option>AP</option>
-                                            <option>KA</option>
-                                        </select>
-                                    </div>
+                                <div class="x_content">
+                                    @if (item.ControlName == "TextBox")
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="nameinput" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" id="nameinput" type="text" class="form-control" style="width:40%">
+                                        </div>
+                                    }
+                                    else if (item.ControlName == "TextArea")
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="textareainput" class="form-label">@item.Name</label>
+                                            <textarea name="@item.Name" id="textareainput" class="form-control" rows="2" style="width:40%"></textarea>
+                                        </div>
+                                    }
+                                    else if (item.ControlName == "Select")
+                                    {
+                                        <div class="col-span-12 sm:col-span-12">
+                                            <label for="selection" class="form-label">@item.Name</label>
+                                            <select class="form-control" id="selection" style="width:40%" name=@item.Name>
+                                                <option selected>Telangana</option>
+                                                <option>AP</option>
+                                                <option>KA</option>
+                                            </select>
+                                        </div>
 
-                                }
-                                else if (item.ControlName == "CheckBox")
-                                {
-                                    <div class="custom-control custom-checkbox col-span-6 sm:col-span-6">
-                                        <label for="textareainput" class="form-label">@item.Name</label>
-                                        <input name="@item.Name" type="checkbox" id="chkproperty" />
-                                    </div>
-                                }
-                                else if (item.ControlName == "FileUpload")
-                                {
-                                    <div class="class=" col-span-12 sm:col-span-12"">
-                                        <label for="customFile" class="form-label">Select File</label>
-                                        <input name="@item.Name" type="file" class="custom-file-input" id="uploadfile" style="width:50%"><br />
-                                    </div>
-                                }
+                                    }
+                                    else if (item.ControlName == "CheckBox")
+                                    {
+                                        <div class="custom-control custom-checkbox col-span-6 sm:col-span-6">
+                                            <label for="textareainput" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" type="checkbox" id="chkproperty" />
+                                        </div>
+                                    }
+                                    else if (item.ControlName == "FileUpload")
+                                    {
+                                        <div class="class=" col-span-12 sm:col-span-12"">
+                                            <label for="customFile" class="form-label">Select File</label>
+                                            <input name="@item.Name" type="file" class="custom-file-input" id="uploadfile" style="width:50%"><br />
+                                        </div>
+                                    }
 
+                                </div>
                             </div>
                         </div>
-                    </div>
 
+                    }
+                    <br />
+                    <div class="form-group">
+                        <button type="submit" id="btnSubmit" class="btn btn-primary w-20">Submit</button>
+                    </div>
                 }
-                <br />
-                <div class="form-group">
-                    <button type="submit" id="btnSubmit" class="btn btn-primary w-20">Submit</button>
-                </div>
-            }
-        </div>
-    </form>
+            </div>
+        </form>
+    </div>
+
+    <div class="x_title" id="viewresponse" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
+    </div>
 </div>
 
 @section scripts
@@ -87,7 +93,8 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script type="text/javascript">
-    completedsaveform = function (xhr) {
+        completedsaveform = function (xhr) {
+            //$("#divProcessing").show();
             var rtn = JSON.parse(xhr.responseText);
             if (rtn.error == false) {
                 Swal.fire({
@@ -96,9 +103,22 @@
                     type: 'success',
                     allowOutsideClick: false
                 }).then(function () {
-                    clearFormCreate();
-                });               
-                
+                    //clearFormCreate();
+
+                    $.ajax({
+                        url: '@Url.Action("GetFormResponse", "DynamicForm")',
+                        type: 'POST',
+                        // headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
+                        //dataType: 'html',
+                        data: { id: rtn.TemplateFormId },
+                    })
+                        .done(function (response) {
+                            $("#showViewResponse").hide();                            
+                            $("#temlateName").hide();
+                            $('#viewresponse').html(response);
+                        });
+                });
+                //$("#divProcessing").hide();
             }
             else {
                 Swal.fire({
@@ -111,9 +131,9 @@
             }
         };
 
-          function clearFormCreate() {           
+        function clearFormCreate() {
             var frm = document.getElementsByName('userform')[0];
             frm.reset();
         }
-        </script>
+    </script>
         }
