--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="x_panel">
             <div class="x_title">
                 <h2 class="page-title">
-                    Form Controls
+                    @ViewBag.TemplateName - > Controls
                     <button type="button" class="btn btn-info pull-right" data-toggle="modal" data-target="#add-field-model">
                         <span class="glyphicon glyphicon-plus"></span> Create
                     </button>
