--- a/DynamicForm/Views/DynamicForm/ViewResponse.cshtml
+++ b/DynamicForm/Views/DynamicForm/ViewResponse.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<DynamicForm.Models.UserFormValuesModel>
-
+@using Shared
 <div class="x_title">
     <h2 class="modal-header bg-warning">View Response</h2>
 </div>
@@ -11,29 +11,41 @@
                 <table class="table" cellpadding="0" cellspacing="0" style="width:100%;border:1px solid black">
                     <thead>
                         @*<tr>
-                            <th style="width:150px">Name</th>
-                            <th style="width:150px">Value</th>
-                            <th></th>
+                        <th style="width:150px">Name</th>
+                        <th style="width:150px">Value</th>
+                        <th></th>
                         </tr>*@
                     </thead>
                     <tbody>
 
                         @if (Model.Count() > 0)
-                        {
+                        {                           
                             @foreach (var item in Model)
                             {
                                 if (@item.TemplateFormFieldId != 0)
                                 {
-                                    <tr>
-                                        <td style="color:black;font:bold">@item.FieldName</td>
-                                        <td>@item.FieldValue</td>
+                                    if (@item.FieldName != "File Upload")
+                                    {
+                                        <tr>
+                                            <td style="color:black;font:bold">@item.FieldName</td>
+                                            <td>@item.FieldValue</td>
 
-                                    </tr>
+                                        </tr>
+                                    }
+                                    else
+                                    {
+                                        <tr>
+                                            <td style="color:black;font:bold">Image</td>
+                                            <td>                                            
+                                                <img class="rounded-full" src="@item.FieldValue">
+                                            </td>
+                                        </tr>
+                                    }
                                 }
                             }
                         }
                     </tbody>
-                    </table>
+                </table>
             </div>
         </div>
     </div>
