--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="x_panel">
             <div class="x_title">
                 <h2 class="page-title">
-                    @ViewBag.TemplateName Controls
+                    @ViewBag.TemplateName - > Controls
                     <button type="button" class="btn btn-info pull-right" data-toggle="modal" data-target="#add-field-model">
                         <span class="glyphicon glyphicon-plus"></span> Create
                     </button>
@@ -61,7 +61,6 @@
                             <div class="form-group">
                                 <label class="required" for="FieldName">Name</label>
                                 <input type="text" id="FieldName" class="form-control" asp-for="Name" />
-                                
                             </div>
                             <div class="form-group">
                                 <label for="FieldDataType">Control Type</label>
@@ -173,11 +172,20 @@
                 $('#btnFieldClose').click();
                 clearFormCreate();
             }
+            else if (responseObject.error && responseObject.duplicateFiled) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Template Field',
+                    text: responseObject.message,
+                    type: 'error',
+                    allowOutsideClick: false
+                });
+            }
             else {
                 Swal.fire({
                     icon: 'error',
                     title: 'Template Field',
-                    text: 'Oops!! Something Went Wrong!',
+                    text: 'Oops!! Something went wrong!',
                     type: 'error',
                     allowOutsideClick: false
                 });
