TemplateFormId missing while checking if the field alrady exist..issue fixed

--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -170,7 +170,7 @@
                     oTable.draw();
                 });
                 $('#btnFieldClose').click();
-                clearFormCreate();
+                clearFieldCreate();
             }
             else if (responseObject.error && responseObject.duplicateFiled) {
                 Swal.fire({
@@ -180,6 +180,8 @@
                     type: 'error',
                     allowOutsideClick: false
                 });
+                 $('#btnFieldClose').click();
+                clearFieldCreate();
             }
             else {
                 Swal.fire({
