--- a/DynamicForm/Views/DynamicForm/Index.cshtml
+++ b/DynamicForm/Views/DynamicForm/Index.cshtml
@@ -11,8 +11,7 @@
 
     .error {
         color: red;
-    }   
-
+    }
 </style>
 <div>
     <div id="temlateName" class="x_title">
@@ -24,8 +23,7 @@
         <div class="modal-body">
             @if (Model.Count() > 0)
             {
-                @Html.Hidden("TemplateFormId", (object)ViewBag.TemplateFormId)
-                @Html.Hidden("SelectedText")
+                @Html.Hidden("TemplateFormId", (object)ViewBag.TemplateFormId)               
                 @foreach (var item in Model)
                 {
                     <div class="row">
@@ -105,18 +103,44 @@
                                     }
 
                                 }
+                                else if (item.ControlId == (int)Shared.Enum.ControlType.CheckBoxList)
+                                {
+                                    <div class="col-span-12 sm:col-span-6">                                        
+                                        <label for="selection" class="form-label">@item.Name</label>
+                                        <br />
+                                        @foreach (SelectListItem option in ViewBag.CheckBoxListOptions)
+                                        {                                            
+                                            <input type="checkbox" name="@item.Name" value="@option.Text" />
+                                            @option.Text
+                                            <br />
+                                        }
+                                    </div>
+                                }
+                                else if (item.ControlId == (int)Shared.Enum.ControlType.RadioButtonList)
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="selection" class="form-label">@item.Name</label>
+                                        <br />
+                                        @foreach (SelectListItem option in ViewBag.RadioButtonsOptions)
+                                        {
+                                            <input type="radio" value="@option.Text" name="@item.Name" />
+                                            @option.Text
+                                            <br />
+                                        }
+                                    </div>
+                                }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.FileUpload)
                                 {
                                     @if (item.IsRequired)
                                     {
-                                        <div class="class=" col-span-12 sm:col-span-12"">
+                                        <div class="custom-file-input">
                                             <label for="@item.Name" class="form-label">Select File</label>
                                             <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:50%" required><br />
                                         </div>
                                     }
                                     else
                                     {
-                                        <div class="class=" col-span-12 sm:col-span-12"">
+                                        <div class="custom-file-input">
                                             <label for="@item.Name" class="form-label">Select File</label>
                                             <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:50%"><br />
                                         </div>
@@ -126,7 +150,7 @@
                             </div>
                         </div>
                     </div>
-
+                    
                 }
                 <br />
                 <div class="form-group">
@@ -153,7 +177,7 @@
             $('#formSubmit').validate();
         });
         completedsaveform = function (xhr) {
-           // $('#progressbar').progressbar({
+            // $('#progressbar').progressbar({
             var rtn = JSON.parse(xhr.responseText);
             if (rtn.error == false) {
                 Swal.fire({
@@ -189,7 +213,7 @@
                 });
             }
             //});
-        };
+        };      
 
         function clearFormCreate() {
             var frm = document.getElementsByName('userform')[0];
