--- a/DynamicForm/Views/DynamicForm/Index.cshtml
+++ b/DynamicForm/Views/DynamicForm/Index.cshtml
@@ -41,7 +41,22 @@
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         @if (item.IsRequired)
                                         {
-                                            <input name="@item.Name" id="@item.Name" type="text" class="form-control" style="width:40%" required>
+                                            @if (item.RegExValue == "Phone Number")
+                                            {
+                                                <input name="@item.Name" id="phone" placeholder="Enter phone number" type="text" onchange="validatePhoneNumber()" class="form-control" style="width:40%" required>
+                                                <span id="message" style="display: none;">@item.RegExMessage</span>
+
+                                            }
+                                            else if (item.RegExValue == "Email")
+                                            {
+                                                <input name="@item.Name" id="email" placeholder="Enter Email address" type="text" onchange="validateEmail()" class="form-control" style="width:40%" required>
+                                                <span id="msg" style="display: none;">@item.RegExMessage</span>
+                                            }
+                                            else
+                                            {
+                                                <input name="@item.Name" id="@item.Name" type="text" class="form-control" style="width:40%" required>
+                                                <span id="message" style="display: none;">@item.RequiredMessage</span>
+                                            }
                                         }
                                         else
                                         {
@@ -106,7 +121,6 @@
                                             <input name="@item.Name" type="checkbox" id="@item.Name" />
                                         </div>
                                     }
-
                                 }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.CheckBoxList)
                                 {
@@ -140,22 +154,71 @@
                                     {
                                         <div class="custom-file-input">
                                             <label for="@item.Name" class="form-label">Select File</label>
-                                            <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:50%" required><br />
+                                            <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%" required>
                                         </div>
                                     }
                                     else
                                     {
                                         <div class="custom-file-input">
                                             <label for="@item.Name" class="form-label">Select File</label>
-                                            <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:50%"><br />
+                                            <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%">
                                         </div>
                                     }
                                 }
-
+                                else if (item.ControlId == (int)Shared.Enum.ControlType.Date)
+                                {
+                                    @if (item.IsRequired)
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="@item.Name" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%" required>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="@item.Name" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%">
+                                        </div>
+                                    }
+                                }
+                                else if (item.ControlId == (int)Shared.Enum.ControlType.Time)
+                                {
+                                    @if (item.IsRequired)
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="@item.Name" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%" required>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="@item.Name" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%">
+                                        </div>
+                                    }
+                                }
+                                else if (item.ControlId == (int)Shared.Enum.ControlType.DateTime)
+                                {
+                                    @if (item.IsRequired)
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="@item.Name" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%" required>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="col-span-12 sm:col-span-6">
+                                            <label for="@item.Name" class="form-label">@item.Name</label>
+                                            <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%">
+                                        </div>
+                                    }
+                                }
                             </div>
                         </div>
                     </div>
-
                 }
                 <br />
                 <div class="form-group">
@@ -175,7 +238,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/lib/sweetalert/js/sweetalert2.all.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>  
     <script type="text/javascript">
 
         $(document).ready(function () {
@@ -224,6 +287,27 @@
             var frm = document.getElementsByName('userform')[0];
             frm.reset();
         }
-    </script>
+
+        function validatePhoneNumber() {
+            var phoneNumber = document.getElementById("phone").value;
+            var phoneRegex = /^\d{10}$/;
+            if (phoneRegex.test(phoneNumber)) {
+                $("#message").hide();
+            } else {
+                $("#message").show();
+            }
         }
+
+        function validateEmail() {            
+            var email = document.getElementById("email").value;
+            var emailRegex = /^([\w-\.]+@@([\w-]+\.)+[\w-]{2,4})?$/;
+            if (emailRegex.test(email)) {
+                $("#msg").hide();
+            } else {
+                $("#msg").show();
+            }
+        }
+       
+    </script>
+ }
 
