Authentication and authorization implementation

--- a/DynamicForm/Views/Shared/_DynamicFormLayout.cshtml
+++ b/DynamicForm/Views/Shared/_DynamicFormLayout.cshtml
@@ -24,6 +24,9 @@
             @RenderBody()
         </main>
     </div>
+    <div>
+        </br>
+    </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
